# jsmntree

./: .gitmodules  CMakeLists.txt
example/: json_minimizer.c
example/jsonfiles/: example.json
include/algorithm/adt/: list.c  list.h  stack.h
include/jsmn/: jsmn.c  jsmn.h
lib/: jsmntree.c  jsmntree.h
